2003-12-16  Jackson Harper <jackson@ximian.com>

	* Page.cs: Render trace data when tracing is enabled.
	
2003-12-15  Jackson Harper <jackson@ximian.com>

	* PageParser.cs: Add Trace and Trace mode attributes.
	
2003-12-15  Jackson Harper <jackson@ximian.com>

	* Page.cs: Use the context trace object.
	
2003-12-14  Alon Gazit <along@mainsoft.com>
	* AttributeCollection.cs: Changed AttributeCollection.Render().
	After the change attributes ,that their value is null, aren't 
	rendered.

2003-12-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Control.cs: remove a few dangling ^M, don't set values for fields
	that has the default value. If Visible is modified and we're tracking
	viewstate, save and restore it. Fixes bug #48689.

2003-12-11  Jackson Harper <jackson@ximian.com>

	* Control.cs: Give null for the ID if it hasn't been explicitly
	set. This fixes bug #51520.
	
2003-12-08  Jackson Harper <jackson@ximian.com>

	* PageParser.cs: Ignore the SmartNavigation attribute for now.
	
2003-12-05  Jackson Harper <jackson@ximian.com>

	* DataBinder.cs (GetIndexedPropertyValue): Check if container is
	an IList and use a cast instead of reflection to retrieve the item
	if it is. Fixes bug #51759.
	
2003-12-04  Alon Gazit <along@mainsoft.com>
	* Page.cs: Changed Page.ID so it will call Control.ID.
	Fixed Bug 51682.	  

2003-12-02  Jackson Harper <jackson@ximian.com>

	* Page.cs: Implemented registered array declarations. Patch by
	Benjamin Jemlich <pcgod@gmx.net>
	
2003-12-02  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TemplateParser.cs: basic check for 'classname' attribute and added
	patch by pcgod@gmx.net for bug #51568, which fixes automatic class
	names for pages starting with a number.

2003-11-30 Ben Maurer  <bmaurer@users.sourceforge.net>

	* LosFormatter.cs: Use ObjectStateFormatter. Pretty big size
	reduction.

	* ObjectStateFormatter.cs: Comment out tracing.

2003-11-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>
